[package]
name = "gremlin-cli"
version = "0.1.1"
authors = ["wolf4ood <maggiolo00@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description= "A minimal Rust CLI for Apache TinkerPop™"
repository = "https://github.com/wolf4ood/gremlin-rs"
keywords = ["database", "graphs","tinkerpop","cli"]
categories = ["database","command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gremlin-client = { path = "../gremlin-client", version = "0.8.11", features = ["async-std-runtime"] }
rustyline = "6.2.0"
smol = "0.4.3"
shellwords = "1.1.0"
futures = "0.3.5"
async-std = "1.6.3"
uuid = "0.8.1"
chrono = "0.4.15"
structopt = { version = "0.3", default-features = false }
prettytable-rs = "0.10.0"
anyhow = "1.0.32"












