[package]
authors = ["Enrico Risa <enrico.risa@gmail.com>"]
name = "gremlin-client"
version = "0.8.3"
edition = "2018"
license = "Apache-2.0"
description= "A Rust client for Apache TinkerPop™"
repository = "https://github.com/wolf4ood/gremlin-rs"
keywords = ["database", "graphs","tinkerpop"]
categories = ["database"]
readme = "README.md"


[features]

default = ["async-std-runtime"]
async_gremlin = ["futures", "mobc", "async-tungstenite", "async-trait", "url", "pin-project-lite"]
tokio-runtime = ["async_gremlin", "tokio", "mobc/tokio", "async-tungstenite/tokio-runtime", "tokio-rustls", "tokio-stream", "tokio"]
async-std-runtime = ["async_gremlin", "async-std", "async-tungstenite/async-std-runtime", "async-tungstenite/async-tls", "async-tls", "mobc/async-std", "rustls", "webpki"]
derive = ["gremlin-derive"]

[badges]
travis-ci = { repository = "wolf4ood/gremlin-rs" }
codecov = { repository = "wolf4ood/gremlin-rs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "wolf4ood/gremlin-rs" }
is-it-maintained-open-issues = { repository = "wolf4ood/gremlin-rs" }
maintenance = {status = "actively-developed"}


[dependencies]
async-std = { version = "1.4.0", features = ["unstable","attributes"], optional = true }
async-tls = { git = "https://github.com/mlemesle/async-tls", branch = "chore/bump-rustls", optional = true }
async-trait = { version = "0.1.10", optional = true }
async-tungstenite = { git = "https://github.com/mlemesle/async-tungstenite", branch = "chore/bump-async-tls", default-features = false, optional = true }
base64 = "0.13.1"
#Avoids bringing in time crate (https://github.com/time-rs/time/issues/293)
chrono = { version = "0.4", default-features = false }
futures = { version = "0.3.1", optional = true }
gremlin-derive = { path = "../gremlin-derive", version = "0.1", optional = true }
lazy_static = "1.3.0"
mobc = { version = "0.7", default-features = false, features = ["unstable"], optional = true }
pin-project-lite = { version = "0.2", optional = true }
r2d2 = "0.8.3"
rustls = { version = "0.21", features = ["dangerous_configuration"], optional = true }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
thiserror = "1.0.20"
tokio = { version = "1", features = ["full"], optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
tokio-rustls = { version = "0.23.4", features = ["dangerous_configuration"], optional = true }
tokio-stream = { version = "0.1.2", optional = true }
# tungstenite = { version = "0.18", features = ["rustls-tls-webpki-roots"] }
tungstenite = { git = "https://github.com/snapview/tungstenite-rs", features = ["rustls-tls-webpki-roots"] }
url = { version = "2.1.0", optional = true }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
webpki = { version = "0.21", optional = true }


[[example]]
name = "traversal_async"
required-features = ["async_gremlin"]

[[example]]
name = "vertex_async"
required-features = ["async_gremlin"]

[[example]]
name = "derive"
required-features = ["derive"]
