[package]
authors = ["Enrico Risa <enrico.risa@gmail.com>"]
name = "gremlin-client"
version = "0.8.11"
edition = "2018"
license = "Apache-2.0"
description= "A Rust client for Apache TinkerPop™"
repository = "https://github.com/wolf4ood/gremlin-rs"
keywords = ["database", "graphs","tinkerpop"]
categories = ["database"]
readme = "README.md"



[features]

default = []
merge_tests = []



async_gremlin = ["futures","mobc","async-tungstenite","async-trait","url","pin-project-lite"]

async_std = ["async-std-runtime"]
tokio-runtime = ["async_gremlin","tokio","async-tungstenite/tokio-runtime","async-tungstenite/tokio-native-tls","tokio-native-tls","tokio-stream"]
async-std-runtime = ["async_gremlin","async-std","async-tungstenite/async-std-runtime","async-tungstenite/async-tls","tokio/sync", "mobc/async-std","async-tls","rustls","webpki"]

derive = ["gremlin-derive"] 

[badges]
travis-ci = { repository = "wolf4ood/gremlin-rs" }
codecov = { repository = "wolf4ood/gremlin-rs", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "wolf4ood/gremlin-rs" }
is-it-maintained-open-issues = { repository = "wolf4ood/gremlin-rs" }
maintenance = {status = "actively-developed"}

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive="1.0"
r2d2 = "0.8.3"
#Avoids bringing in time crate (https://github.com/time-rs/time/issues/293)
chrono = { version = "0.4", default-features = false}
lazy_static = "1.3.0"
base64 = "0.21.4"
native-tls = "0.2.3"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
async-tungstenite = { version = "0.23", optional = true, default-features=false}
async-std =  { version = "1.4.0", optional = true, features = ["unstable","attributes"] }
async-trait = { version = "0.1.10", optional = true }
async-tls =  { version = "0.12", optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
tokio-stream = { version = "0.1.2", optional = true }
gremlin-derive = { path="../gremlin-derive", version="0.1", optional=true }
rustls =   { version="0.20", features = ["dangerous_configuration"], optional = true}
webpki = { version = "0.22.2", optional = true }
thiserror = "1.0.20"



mobc = {version = "0.8", optional = true }
url =  {version = "2.1.0", optional = true}
futures = { version = "0.3.1", optional = true}
pin-project-lite = { version = "0.2", optional = true}
tokio = { version = "1", optional=true, features = ["full"] }


[dependencies.uuid]
features = ["serde", "v4"]
version = "1.1.2"




[[example]]
name = "traversal_async"
required-features = ["async_gremlin"]

[[example]]
name = "vertex_async"
required-features = ["async_gremlin"]

[[example]]
name = "derive"
required-features = ["derive"]
